[project]
name = "recipes"
version = "0.0.0"
description = "Manage spaCy installation for go-spacy"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm",
    "spacy>=3.8.11",
]

[tool.uv.sources]
# Supports spaCy [3.8, 3.9]: https://github.com/explosion/spacy-models/releases/tag/en_core_web_sm-3.8.0
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
# - en_core_web_sm (13MB) - Good for basic NLP tasks, fastest
# - en_core_web_md (40MB) - Includes word vectors
# - en_core_web_lg (740MB) - Most accurate, slower
